--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -57,7 +57,8 @@
         <li><a class="dropdown-item" href="#">Settings</a></li>
         <li><a class="dropdown-item" href="#">Profile</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
+        <% link_to 'Sign out', desttoy_user_session_path %>
+          <li><a class="dropdown-item" href="#"></a></li>
       </ul>
     </div>
   </div>
