--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -150,9 +150,10 @@
     </ul>
     <hr>
     <div class="dropdown">
+    <% if user_signed_in? %>
       <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>mdo</strong>
+        <%# <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2"> %>
+        <strong><% current_user.nickname %></strong>
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
         <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -160,6 +161,16 @@
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#">Sign out</a></li>
       </ul>
+    <%else%>
+      <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+        <strong>Menu</strong>
+      </a>
+      <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+        <li><a class="dropdown-item" href="#">Sign in</a></li>
+        <li><a class="dropdown-item" href="#">Sign up</a></li>
+      </ul>
+    <% end %>
+
     </div>
   </div>
   
