トップページの変更

--- a/app/assets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/user/login.css
@@ -12,8 +12,9 @@ body {
 .form-signin {
   width: 100%;
   max-width: 330px;
-  padding: 15px;
+  padding: 60px !important;
   margin: auto;
+
 }
 
 .form-signin .checkbox {
