--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,4 @@
-<%# <% render "shared/header" %>
-<%= render "shared/sidebar" %>
+<div class="d-flex janbo">
+  <%= render "shared/sidebar" %>
+  <%= render "shared/main" %>
+</div>
