--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,7 +42,7 @@
     <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
 
-      <%= render 'shared/error_messages', model: f.object %>
+      <%= render 'devise/shared/error_messages', model: f.object %>
 
 
     <div class="form-floating">
