--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -119,7 +119,7 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="#" class="nav-link link-dark" aria-current="page">
+        <a href="/" class="nav-link link-dark" aria-current="page">
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
           Home
         </a>
@@ -168,12 +168,12 @@
         <strong>Menu</strong>
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-        <li><a class="dropdown-item" href="#">Sign in</a></li>
-        <li><a class="dropdown-item" href="#">Sign up</a></li>
+        <li><a class="dropdown-item" href="/users/sign_in" data-method="get">Sign in</a></li>
+        <li><a class="dropdown-item" href="/users/sign_up" data-method="get">Sign up</a></li>
       </ul>
     <% end %>
 
-    </div>
+    </div> 
   </div>
   
 </main>
