--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,6 +2,11 @@
 <%= form_with model: @item, url:items_path, local: true, class: "mx-auto col-6" do |f| %>
   <div class="item-box justify-content-center">
     <p class="text-center mb-3 fs-1">アイテムを登録する</p>
+
+    <label class="form-image">
+      <%= f.file_field :image, class: 'form-control mb-2' %>
+    </label>
+
     <%= f.text_field :name, class:"form-control mb-2", placeholder:"Name" %>
     <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:color_id, Color.all, :id, :name, {}, {class:"form-select mb-2"}) %>
