--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,16 @@
 .side-bar {
   height: 100vh;
 }
+
+.item-info {
+  text-decoration: none;
+}
+
+.item-img {
+  width: 33vh;
+  height: 33vh;
+}
+
+.list {
+  text-decoration: none;
+}
