--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -40,7 +40,7 @@
   </head>
 <body>
     
-
+  <%= render "shared/sidebar" %>
 
 <main class="container d-flex flex-column ml-5">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary col-md-12 row">
