コーディネート投稿機能の実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,19 +46,19 @@
 
 
     <div class="form-floating">
-          <%= f.text_field :nickname, class:"form-control", id:"floatingInput", placeholder:"name", maxlength:"40", autofocus: true  %>
+          <%= f.text_field :nickname, class:"form-control rounded mb-1", id:"floatingInput", placeholder:"name", maxlength:"40", autofocus: true  %>
       <label for="floatingInput">Nickname</label>
     </div>
     <div class="form-floating">
-      <%= f.email_field :email, class:"form-control", id:"floatingInput", placeholder:"email@example.com" %>
+      <%= f.email_field :email, class:"form-control rounded mb-1", id:"floatingInput", placeholder:"email@example.com" %>
       <label for="floatingInput">Email address</label>
     </div>
     <div class="form-floating">
-      <%= f.password_field :password, class:"form-control", id:"floatingPassword", placeholder:"Password", maxlength: "8" %>
+      <%= f.password_field :password, class:"form-control rounded mb-1", id:"floatingPassword", placeholder:"Password", maxlength: "8" %>
       <label for="floatingPassword">Password</label>
     </div>
     <div class="form-floating">
-      <%= f.password_field :password_confirmation, class:"form-control", id:"floatingPassword", placeholder:"Password", maxlength: "8" %>
+      <%= f.password_field :password_confirmation, class:"form-control rounded mb-1", id:"floatingPassword", placeholder:"Password", maxlength: "8" %>
       <label for="floatingPassword">Password</label>
     </div>
 
@@ -69,7 +69,7 @@
       </label>
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
   <% end %>
 </main>
 
