--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -50,26 +50,31 @@
       </div>
       <div class="col-md-6 px-0 row align-self-center">
         <p class="lead mb-0 text-center"><a href="/items/new" data-method="get" class="text-white fw-bold">Post Item</a></p>
-        <p class="lead mb-0 text-center"><a href="#" class="text-white fw-bold">Post Coordinate</a></p>
+        <p class="lead mb-0 text-center"><a href="/posts/new" data-method="get" class="text-white fw-bold">Post Coordinate</a></p>
       </div>
-
     </div>
+
+    <% @posts.each do |post|%>
+      <%= link_to posts_path(post.id) do %>
     <div class="row mb-2 col-md-12">
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-primary">World</strong>
-            <h3 class="mb-0">Featured post</h3>
-            <div class="mb-1 text-muted">Nov 12</div>
-            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
+            <strong class="d-inline-block mb-2 text-success">World</strong>
+            <h3 class="mb-0 text-muted">Featured post</h3>
+            <div class="mb-1 text-muted"><%= post.date%></div>
+            <p class="card-text mb-auto text-muted"><%= post.weather.name %><br><%= post.low.name %>~<%= post.high.name %></p>
+
+            <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
+            <a href="#" class="deco stretched-link text-muted">詳細を見る</a>
           </div>
           <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
           </div>
         </div>
       </div>
+      <% end %>
+    <% end %>
       <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
