コーディネート投稿機能の実装

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,21 +1,1 @@
-<%= render "shared/sidebar" %>
-<% @items.each do |item|%>
-  <li class='list'>
-    <%= link_to items_path(item.id) do %>
-      <div class='item-img-content'>
-        <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-      </div>
-      <div class='item-info'>
-        <h3 class='item-name'>
-          <%= item.name %>
-        </h3>
-          <span><%= item.category.name %><br><%= item.color.name %><br><%= item.season.name %></span>
-          <div class='star-btn'>
-            <%= image_tag "star.png", class:"star-icon" %>
-            <span class='star-count'>0</span>
-          </div>
-        </div>
-      </div>
-    <%end%>
-  </li>
-<% end %>
+<%= render "shared/main" %>
