--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -42,23 +42,25 @@
     
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column ml-5">
-    <div class="p-4 p-md-5 mb-4 text-white rounded bg-primary col-md-12 row">
-      <div class="col-md-6 px-0">
-        <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-      </div>
-      <div class="col-md-6 px-0 row align-self-center">
-        <p class="lead mb-0 text-center"><a href="/items/new" data-method="get" class="text-white fw-bold">Post Item</a></p>
-        <p class="lead mb-0 text-center"><a href="/posts/new" data-method="get" class="text-white fw-bold">Post Coordinate</a></p>
-      </div>
-    </div>
+<main class="container d-flex flex-column ml-5 overflow-auto img-1">
 
+    <%= image_tag "closet-img.jpeg", class: "p-1 p-md-5 mb-4 text-white rounded col-md-12 row header-img"%>
+      <div class="header row">
+        <div class="col-md-6 px-5 header-text">
+          <h1 class="display-4 fst-italic">Closet Curation</h1>
+          <p class="lead my-3">aaaaaaaaaa</p>
+        </div>
+        <div class="col-md-6 px-0 row align-self-center">
+          <div class="lead mb-0 text-center mb-5"><a href="/items/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">Post Item</a></div>
+          <div class="lead mb-0 text-center "><a href="/posts/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">PostCoordinate</a></div>
+        </div>
+      </div>
+
+  <div class = "row-cols-2">
     <% @posts.each do |post|%>
-      <%= link_to posts_path(post.id) do %>
-    <div class="row mb-2 col-md-12">
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <%= link_to post_path(post.id), class: "text-decoration-none" do %>
+      <div class="col-md-12">
+        <div class="row g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success">World</strong>
             <h3 class="mb-0 text-muted">Featured post</h3>
@@ -66,7 +68,7 @@
             <p class="card-text mb-auto text-muted"><%= post.weather.name %><br><%= post.low.name %>~<%= post.high.name %></p>
 
             <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
-            <a href="#" class="deco stretched-link text-muted">詳細を見る</a>
+            <div class="deco stretched-link text-muted">詳細を見る</div>
           </div>
           <div class="col-auto d-none d-lg-block">
             <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
@@ -75,26 +77,8 @@
       </div>
       <% end %>
     <% end %>
-      <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <strong class="d-inline-block mb-2 text-success">Design</strong>
-            <h3 class="mb-0">Post title</h3>
-            <div class="mb-1 text-muted">Nov 11</div>
-            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="stretched-link">Continue reading</a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
 </main>
-
-
-
 
     
   </body>
