--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,4 +4,7 @@
     <div class='star-btn'>
       <%= image_tag "star.png", class:"star-icon" %>
       <span class='star-count'>0</span>
+      <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "post-edit-btn" %>
+      <%= link_to "削除", post_path(@post.id), method: :delete, class: "post-destroy-btn" %>
+
     </div>
