--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,9 +11,7 @@
 
     <div class = "d-flex add-form">
     <%= f.collection_select(:item_id, Item.all, :id, :name, {prompt: "---"}, {class:"form-select mb-2 me-2 col-11"}) %>
-
-<%# options_for_select(Item.all.pluck(:name, :id), {prompt: "---"}) %>
-    <button type="button" class="btn btn-light mb-2 col-1 p-2 text-center">＋</button>
+    <button type="button" class="btn btn-light mb-2 col-1 p-2 text-center" onclick="addForm()">＋</button>
     </div>
     <%= f.collection_select(:weather_id, Weather.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:low_id, Low.all, :id, :name, {}, {class:"form-select mb-2"}) %>
