ビューの変更

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/sidebar" %>
-<%= form_with model: @post, url:posts_path, local: true, class: "mx-auto col-4" do |f| %>
+<%= form_with model: @post, local: true, class: "mx-auto col-4" do |f| %>
   <div class="post-box justify-content-center">
     <p class="text-center mb-3 fs-2">コーディネートを編集する</p>
 
