--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,21 @@
 <%= render "shared/sidebar" %>
-  <%= @post.date %>
-    <span><%= @post.weather.name %><br><%= @post.low.name %><br><%= @post.high.name %><%= @post.content%></span>
-    <div class='star-btn'>
-      <%= image_tag "star.png", class:"star-icon" %>
-      <span class='star-count'>0</span>
-      <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "post-edit-btn" %>
-      <%= link_to "削除", post_path(@post.id), method: :delete, class: "post-destroy-btn" %>
+<div class="bg-light border rounded p-4 mx-auto">
+  <div class = "d-flex flex-column">
+    <div class = "me-2 ">
+      日付：<%= @post.date %><br>
     </div>
+      天気：<%= @post.weather.name %><br>
+      気温：<%= @post.low.name %>℃ 〜 <%= @post.high.name %>℃<br>
+      <% if @post.content.present? %>
+        <span>メモ：<%= @post.content %></span>
+      <% end %>
+  </div>
+    <%# <div class='star-btn'>
+      <%= image_tag "star.png", class:"star-icon me-2 " %>
+      <%# <span class='star-count'>0</span><br>
+    </div> %> 
+    <div class="row mt-3">
+      <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "post-edit-btn btn btn-primary col-sm-5 ms-1" %>
+      <%= link_to "削除", post_path(@post.id), method: :delete, class: "post-destroy-btn btn btn-danger col-sm-5 ms-1" %>
+    </div>
+</div>
