--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -42,7 +42,7 @@
     
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column ml-5 overflow-auto img-1">
+<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 ">
 
     <%= image_tag "closet-img.jpeg", class: "p-1 p-md-5 mb-4 text-white rounded col-md-12 row header-img"%>
       <div class="header row">
