--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -107,12 +107,12 @@
   </symbol>
 </svg>
 
-<main class="side-bar">
+<main class="side-bar flex-shrink-0 pe-0">
   <h1 class="visually-hidden">Sidebars examples</h1>
 
 
-  <div class="d-flex flex-column p-3 bg-light" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+  <div class="d-flex flex-column p-3 bg-light" style="width: 200px;">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 md-auto link-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
       <span class="fs-4">Closet Curation</span>
     </a>
