--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -42,9 +42,9 @@
     
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 ">
+<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 align-self-center">
 
-    <%= image_tag "closet-img.jpeg", class: "p-1 p-md-5 mb-4 text-white rounded col-md-12 row header-img"%>
+    <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img"%>
       <div class="header row">
         <div class="col-md-6 px-5 header-text">
           <h1 class="display-4 fst-italic">Closet Curation</h1>
