--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -42,9 +42,9 @@
     
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 align-self-center">
+<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 ">
 
-    <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img"%>
+    <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
       <div class="header row">
         <div class="col-md-6 px-5 header-text">
           <h1 class="display-4 fst-italic">Closet Curation</h1>
@@ -56,25 +56,23 @@
         </div>
       </div>
 
-  <div class = "row-cols-2">
+  <div class = "row">
     <% @posts.each do |post|%>
-      <%= link_to post_path(post.id), class: "text-decoration-none" do %>
-      <div class="col-md-12">
-        <div class="row g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
+      <%= link_to post_path(post.id), class: "text-decoration-none col-md-6 row-md" do %>
+        <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
+          <div class="col-6 p-4 position-static">
             <strong class="d-inline-block mb-2 text-success">World</strong>
             <h3 class="mb-0 text-muted">Featured post</h3>
             <div class="mb-1 text-muted"><%= post.date%></div>
-            <p class="card-text mb-auto text-muted"><%= post.weather.name %><br><%= post.low.name %>~<%= post.high.name %></p>
-
+            <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
             <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
-            <div class="deco stretched-link text-muted">詳細を見る</div>
           </div>
-          <div class="col-auto d-none d-lg-block">
-            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <div class="col-6 d-none d-lg-block align-self-center">
+            <% post.items.each do |item| %>
+              <%= image_tag item.image.variant(resize: '90x90') %>
+            <% end %>
           </div>
         </div>
-      </div>
       <% end %>
     <% end %>
   </div>
