ルートパスの変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,1 @@
-<%= render "shared/sidebar" %>
-  <%= @post.date %>
-    <span><%= @post.weather.name %><br><%= @post.low.name %><br><%= @post.high.name %><%= @post.content%></span>
-    <div class='star-btn'>
-      <%= image_tag "star.png", class:"star-icon" %>
-      <span class='star-count'>0</span>
-    </div>
+<%= render "shared/main" %>
