--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -62,8 +62,7 @@
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
           <div class="col-6 p-4 position-static">
             <strong class="d-inline-block mb-2 text-success">World</strong>
-            <h3 class="mb-0 text-muted">Featured post</h3>
-            <div class="mb-1 text-muted"><%= post.date%></div>
+            <h4 class="mb-1 text-muted"><%= post.date%></h4>
             <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
             <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
           </div>
