--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -42,7 +42,7 @@
     
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 col-12 px-5 ">
+<main class="container d-flex flex-column overflow-auto img-1 px-5 ">
 
     <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
       <div class="header row">
