--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -131,7 +131,7 @@
         </a>
       </li>
       <li>
-        <a href="#" class="nav-link link-dark">
+        <a href="/items" data-method="get" class="nav-link link-dark">
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#love"/></svg>
           Item
         </a>
