--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,7 +17,7 @@
       <%= image_tag "star.png", class:"star-icon me-2 " %>
       <%# <span class='star-count'>0</span><br>
     </div> %> 
-    <div class="row mt-3">
+    <div class="row mt-3 justify-content-center">
       <%= link_to "編集", edit_item_path(@item.id), method: :get, class: "btn btn-primary col-sm-5 ms-1" %>
       <%= link_to "削除", item_path(@item.id), method: :delete, class: "btn btn-danger col-sm-5 ms-1" %>
     </div>
