--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,15 +3,20 @@
   <div class="post-box justify-content-center">
     <p class="text-center mb-3 fs-2">コーディネートを編集する</p>
 
-    <label class="form-image">
+    <label class="form-image col-12">
       <%= f.file_field :image, class: 'form-control mb-2' %>
     </label>
 
     <%= f.date_field :date, class:"form-control mb-2", placeholder:"yyyy/mm/dd" %>
+
+    <div class = "d-flex add-form">
+    <%= f.collection_select(:item_id, Item.all, :id, :name, {prompt: "---"}, {class:"form-select mb-2 me-2 col-11"}) %>
+    <button type="button" class="btn btn-light mb-2 col-1 p-2 text-center" onclick="addForm()">＋</button>
+    </div>
     <%= f.collection_select(:weather_id, Weather.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:low_id, Low.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:high_id, High.all, :id, :name, {}, {class:"form-select mb-2"}) %>
-    <%= f.text_area :content, class:"form-control  mb-3", placeholder:"Memo" %>
-    <p class= "text-center"><%= f.submit "POST" ,class:"btn btn-primary col-12" %></p>
+    <%= f.text_area :content, class:"form-control mb-3", placeholder:"Memo" %>
+    <p class= "text-center"><%= f.submit "POST" ,class:"btn btn-primary" %></p>
   </div>
 <% end %>
