ヘッダーを部分テンプレートに変更

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,8 @@
   <%= render "shared/sidebar" %>
 
-  <main class="container overflow-auto">
+<main class="container d-flex flex-column overflow-auto img-1 px-5 ">
+
+    <%= render "shared/header" %>
 
   <div class = "row">
     <% @items.each do |item|%>
