--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -44,17 +44,7 @@
 
 <main class="container d-flex flex-column overflow-auto img-1 px-5 ">
 
-    <%= image_tag "closet-img.jpeg", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
-      <div class="header row">
-        <div class="col-md-6 px-5 header-text">
-          <h1 class="display-4 fst-italic">Closet Curation</h1>
-          <p class="lead my-3">aaaaaaaaaa</p>
-        </div>
-        <div class="col-md-6 px-0 row align-self-center">
-          <div class="lead mb-0 text-center mb-5"><a href="/items/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">Post Item</a></div>
-          <div class="lead mb-0 text-center "><a href="/posts/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">PostCoordinate</a></div>
-        </div>
-      </div>
+  <%= render "shared/header" %>
 
   <div class = "row">
     <% @posts.each do |post|%>
