季節別表示の設定

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
         名前：<%= @item.name %><br>
         カテゴリー：<%= link_to @item.category.name, items_path(category_id: @item.category_id), method: :get, class: "text-decoration-none" %><br>
         色：<%= link_to @item.color.name, items_path(color_id: @item.color_id), method: :get, class: "text-decoration-none" %><br>
-        季節：<%= @item.season.name %></p>
+        季節：<%= link_to @item.season.name, items_path(season_id: @item.season_id), method: :get, class: "text-decoration-none" %>
       <% if @item.info.present? %>
         <span>メモ：<%= @item.info %></span>
       <% end %>
