--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,7 +7,7 @@
   <div class = "row">
     <% @items.each do |item|%>
       <%= link_to item_path(item.id), class: "text-decoration-none col-lg-3 col-md-6 row-md " do %>
-      <div class= "img-size">
+      <div class= "img-size mx-auto">
         <%= image_tag item.image.variant(resize: '200x200') %>
         </div>
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
