--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,26 +1,33 @@
 <%= render "shared/sidebar" %>
-<div class="bg-light border rounded p-4 mx-auto">
-  <div class = "d-flex flex-column text-center">
-    <div class = "post-img">
-    <% @post.items.each do |item| %>
-      <%= image_tag item.image.variant(resize: '200x200') %> 
-    <% end %>
-    </div>
-    <div class = "mt-3 mb-3">
-      日付：<%= @post.date %><br>
-      天気：<%= @post.weather.name %><br>
-      気温：<%= @post.low.name %>℃ 〜 <%= @post.high.name %>℃<br>
-      <% if @post.content.present? %>
-        <span>メモ：<%= @post.content %></span>
+<div class="container">
+  <div class="bg-light border rounded p-4 mx-auto row">
+    <div class = "d-flex flex-column text-center">
+      <div class = "post-img">
+      <% @post.items.each do |item| %>
+        <%= image_tag item.image.variant(resize: '200x200') %> 
       <% end %>
       </div>
-  </div>
-    <%# <div class='star-btn'>
-      <%= image_tag "star.png", class:"star-icon me-2 " %>
-      <%# <span class='star-count'>0</span><br>
-    </div> %> 
-    <div class="row mt-3 justify-content-center">
-      <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn btn-primary col-sm-5 ms-1" %>
-      <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn btn-danger col-sm-5 ms-1" %>
+      <div class = "mt-3 mb-3">
+        日付：<%= @post.date %><br>
+        天気：<%= @post.weather.name %><br>
+        気温：<%= @post.low.name %>℃ 〜 <%= @post.high.name %>℃<br>
+        <% if @post.content.present? %>
+          <span>メモ：<%= @post.content %></span>
+        <% end %>
+        </div>
     </div>
-</div>
+      <%# <div class='star-btn'>
+        <%= image_tag "star.png", class:"star-icon me-2 " %>
+        <%# <span class='star-count'>0</span><br>
+      </div> %> 
+      <div class="row mt-3 justify-content-center">
+        <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn btn-primary col-sm-5 ms-1" %>
+        <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn btn-danger col-sm-5 ms-1" %>
+      </div>
+  </div>
+  <div class="row">
+  <%= month_calendar do |date| %>
+    <%= date %>
+  <% end %>
+  </div>
+  </div>
