投稿ボタンの表示

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,3 +9,10 @@
           <div class="lead mb-0 text-center "><a href="/posts/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">PostCoordinate</a></div>
         </div>
       </div>
+      <div class="container">
+        <div class="row border p-3 mb-4 d-flex justify-content-between">
+          <div class="lead mb-0 text-center me-0 col-3 d-flex align-items-center"><a href="/items/new" data-method="get" class="fw-bold rounded-pill border border-dark d-flex p-4 m-0">Post Item</a></div>
+          <div class="lead mb-0 text-center col-3 d-flex align-items-center"><a href="/posts/new" data-method="get" class="fw-bold rounded-pill border border-dark d-flex p-4">Post Coordinate</a></div>
+        </div>
+      </div>
+
