--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -13,3 +13,38 @@
   height: 400px;
   object-fit: cover;
 }
+
+.post-btn {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  box-sizing: border-box;
+  padding: 0 10px;
+  text-align: center;
+  background: #333;
+  border-radius: 50%;
+  color: #fff;
+  text-decoration: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-btn:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 85%;
+  height: 85%;
+  border: 2px solid #333;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(1.1);
+  transition: .3s ease;
+}
+
+.post-btn:hover:after {
+  transform: translate(-50%, -50%) scale(1);
+  border-color: #fff;
+}
