--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,14 +5,12 @@
           <p class="lead my-3">aaaaaaaaaa</p>
         </div>
         <div class="col-md-6 px-0 row align-self-center">
-          <div class="lead mb-0 text-center mb-5"><a href="/items/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">Post Item</a></div>
-          <div class="lead mb-0 text-center "><a href="/posts/new" data-method="get" class="text-white fw-bold rounded-pill border border-dark p-4">PostCoordinate</a></div>
         </div>
       </div>
-      <div class="container">
-        <div class="row border p-3 mb-4 d-flex justify-content-between">
-          <div class="lead mb-0 text-center me-0 col-3 d-flex align-items-center"><a href="/items/new" data-method="get" class="fw-bold rounded-pill border border-dark d-flex p-4 m-0">Post Item</a></div>
-          <div class="lead mb-0 text-center col-3 d-flex align-items-center"><a href="/posts/new" data-method="get" class="fw-bold rounded-pill border border-dark d-flex p-4">Post Coordinate</a></div>
+        <div class="row  p-3 mb-4 d-flex justify-content-center">
+        <div class="col-7 row border rounded-pill bg-light d-flex justify-content-between p-4">
+          <div class="lead col-md-3 d-flex justify-content-center"><a href="/items/new" data-method="get" class="fw-bold post-btn">Post ITEM</a></div>
+          <div class="lead col-md-3 d-flex justify-content-center"><a href="/posts/new" data-method="get" class="fw-bold post-btn">Post OOTD</a></div>
         </div>
-      </div>
+        </div>
 
