ヘッダーの変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
       <div class="header row">
         <div class="col-md-6 px-5 header-text">
           <h1 class="display-4 fst-italic">Closet Curation</h1>
-          <p class="lead my-3">aaaaaaaaaa</p>
+          <%# <p class="lead my-3">aaaaaaaaaa</p> %>
         </div>
         <div class="col-md-6 px-0 row align-self-center">
         </div>
