ボタン表示の変更

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -115,6 +115,8 @@
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 md-auto link-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
       <span class="fs-4">Closet Curation</span>
+          <%# <%= image_tag "main_logo.png", class: "p-1 mb-4 mt-4 text-white rounded row align-self-center" %>
+
     </a>
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
