--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,9 +17,11 @@
       <%= image_tag "star.png", class:"star-icon me-2 " %>
       <%# <span class='star-count'>0</span><br>
     </div> %> 
-    <div class="row mt-3 justify-content-center">
-      <%= link_to "編集", edit_item_path(@item.id), method: :get, class: "btn btn-primary col-sm-5 ms-1" %>
-      <%= link_to "削除", item_path(@item.id), method: :delete, class: "btn btn-danger col-sm-5 ms-1" %>
+    <div class="row d-flex justify-content-center">
+      <div class="row col mt-3 d-flex justify-content-center">
+        <%= link_to "編集", edit_item_path(@item.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-4 me-1" %>
+        <%= link_to "削除", item_path(@item.id), method: :delete, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-4" %>
+      </div>
     </div>
   </div>
 </div>
