--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/sidebar" %>
-<div class="container">
+<div class="main container overflow-auto">
   <div class="bg-light border rounded p-4 mx-auto row">
     <div class = "d-flex flex-column text-center">
       <div class = "post-img">
@@ -20,14 +20,17 @@
         <%= image_tag "star.png", class:"star-icon me-2 " %>
         <%# <span class='star-count'>0</span><br>
       </div> %> 
-      <div class="row mt-3 justify-content-center">
-        <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn btn-primary col-sm-5 ms-1" %>
-        <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn btn-danger col-sm-5 ms-1" %>
+      <div class="row d-flex justify-content-center">
+
+      <div class="row col mt-3 justify-content-center">
+        <%= link_to "編集", edit_post_path(@post.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-sm-5 ms-1" %>
+        <%= link_to "削除", post_path(@post.id), method: :delete, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-sm-5 ms-1" %>
       </div>
   </div>
-  <div class="row">
+</div>
+  <div class="d-flex justify-content-center">
+  <div class="col-8">
   <%= month_calendar do |date| %>
     <%= date %>
   <% end %>
-  </div>
   </div>
