--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,26 +1,24 @@
 <%= render "shared/sidebar" %>
 <%= form_with model: @post, url:posts_path, local: true, class: "mx-auto col-4" do |f| %>
   <div class="post-box justify-content-center">
-    <p class="text-center mb-3 fs-2">コーディネートを登録する</p>
-
-    <label class="form-image col-12">
-      <%= f.file_field :image, class: 'form-control mb-2' %>
-    </label>
+    <p class="text-center mb-3 fs-2">コーディネート登録</p>
 
     <%= f.date_field :date, class:"form-control mb-2", placeholder:"yyyy/mm/dd" %>
 
-    <div class = "add-form mb-2">
+    <div class = "add-form row p-3">
       <% Item.all.each do |item| %>
-        <label class="form-check">
+        <label class="form-check col-4">
           <input class="form-check-input" type="checkbox" name="post[item_ids][]" value="<%= item.id %>">
-          <%= item.name %>
+          <%# <%= item.name %>
+          <%= image_tag item.image.variant(resize: '50x50') %>
+
         </label>
       <% end %>
     </div>
     <%= f.collection_select(:weather_id, Weather.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:low_id, Low.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:high_id, High.all, :id, :name, {}, {class:"form-select mb-2"}) %>
-    <%= f.text_area :content, class:"form-control mb-3", placeholder:"Memo" %>
+    <%= f.text_area :content, class:"form-control mb-3", placeholder:"メモ" %>
     <p class= "text-center"><%= f.submit "POST" ,class:"btn btn-primary" %></p>
   </div>
 <% end %>
