--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -160,7 +160,8 @@
       </a>
       <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
         <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
+        <%# <li><a class="dropdown-item" href="/users/edit">Settings</a></li> %>
+        <%= link_to "Settings", edit_user_registration_path, class:"dropdown-item" %>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/users/sign_out" data-method="delete">Sign out</a></li>
 
