--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -6,15 +6,16 @@
 
   <div class = "row">
     <% @accounts.each do |account|%>
-      <%# <%= link_to account_path(account.id), class: "text-decoration-none col-lg-3 col-md-6 row-md " do %>
-      <%# <div class= "img-size mx-auto"> %>
-        <%# <%= image_tag item.image.variant(resize: '200x200') %>
+      <%= link_to account_path(account.id), class: "text-decoration-none col-lg-3 col-md-6 row-md " do %>
+      <%# <div class= "img-size mx-auto">
+        <%= image_tag item.image.variant(resize: '200x200') %>
         <%# </div> %>
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
           <div class="position-static p-3">
             <h4 class="mb-1 text-muted"><%= account.name%></h4>
           </div>
         </div>
+        <% end %>
     <% end %>
   </div>
 </main>
