アカウント削除の実装

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -49,7 +49,7 @@
       <label for="floatingPassword">生年月日</label>
     </div>
 
-    <button class="w-100 btn btn-lg bg-primary-subtle border border-primary-subtle text-primary-emphasis" type="submit">追加</button>
+    <button class="w-100 btn btn-lg bg-primary-subtle border border-primary-subtle text-primary-emphasis" type="submit">変更</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
   <% end %>
 </main>
