--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -2,7 +2,12 @@
 
 <main class="container d-flex flex-column overflow-auto img-1 px-5 ">
 
-    <%= render "shared/header" %>
+      <div class="row p-3 mb-4 d-flex justify-content-center">
+        <div class="col-7 row border rounded-pill bg-light d-flex justify-content-between p-4">
+          <div class="lead col-md-3 d-flex justify-content-center"><%= link_to "Account NEW", new_account_path, method: :get, class: "fw-bold post-btn" %></div>
+        </div>
+      </div>
+
 
   <div class = "row">
     <% @accounts.each do |account|%>
