--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -145,7 +145,7 @@
         </a>
       </li>
       <li>
-        <a href="/accounts/new" data-method="get" class="nav-link link-dark">
+        <a href="/accounts" data-method="get" class="nav-link link-dark">
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
           Accounts
         </a>
