--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,10 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%# <%= render "devise/shared/error_messages", resource: resource %>
 
+      <label class="form-image col-12">
+      <%= f.file_field :image, class: 'form-control mb-2' %>
+    </label>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
