--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,6 +41,10 @@
     <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
 
       <%= render 'devise/shared/error_messages', model: f.object %>
+      
+    <label class="form-image col-12">
+      <%= f.file_field :image, class: 'form-control mb-2' %>
+    </label>
 
     <div class="form-floating">
           <%= f.text_field :nickname, class:"form-control rounded mb-1", id:"floatingInput", placeholder:"name", maxlength:"40", autofocus: true  %>
