プロフィール写真の表示

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -36,7 +36,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <%= form_with model: @account, url: accounts_path, id: 'new_account', local: true do |f| %>
+  <%= form_with model: @account, id: 'new_account', local: true do |f| %>
         <%= image_tag "main_logo1.png", class: "p-1 mx-auto" %>
     <h1 class="h3 mb-3 fw-normal">アカウントの編集</h1>
 
