--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,9 +1,14 @@
 <%= render "shared/sidebar" %>
 <div class="bg-light border rounded p-4 mx-auto">
   <div class = "d-flex flex-column text-center">
-    <%# <div class = "post-img">
-      <%= image_tag @item.image.variant(resize: '200x200') %> 
-    <%# </div> %> 
+    <div class = "post-img">
+        <% if @account.image.present? %>
+        <%= image_tag @account.image.variant(resize: '200x200') %>
+        <% else %>
+        <%= image_tag "icon.png", variant: { resize: '200x200' } %>
+        <% end %>
+
+    </div>
     <div class = "mt-3 mb-3 ">
       <%= @account.name %><br>
       <% if @account.date.present? %>
