jsによる画面遷移

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,13 @@
 <%= render "shared/sidebar" %>
-  <%= form_with model: @post, url:posts_path, local: true, class: "mx-auto col-4", id: "step1-form", remote: true do |f| %>
-<div id = "content">
-  <div class="post-box justify-content-center">
+<div class= "d-flex justify-content-center col-12 w-25">
+<%= form_with model: @post, url: posts_path, local: true, class: "p-5", id: "step1-form" do |f| %>
+  <div class="post-box">
     <p class="text-center mb-3 fs-2">コーディネート登録</p>
 
     <div class="add-form row p-3">
+    <div class="d-flex justify-content-center flex-column">
       <% Account.all.each do |account| %>
-        <label class="form-radio mb-2">
+        <label class="form-radio mb-2 text-center">
           <input class="form-radio-input" type="radio" name="post[account_id]" value="<%= account.id %>">
           <% if account.image.present? %>
             <%= image_tag account.image.variant(resize: '50x50'), class: "rounded-circle" %>
@@ -17,10 +18,14 @@
         </label>
       <% end %>
     </div>
-      <p class="text-center next">
-      <%= f.button "次へ", class: "btn btn-primary", type: "button", id: "next" %>
-      </p>
+    <p class="text-center next">
+      <%= button_tag "次へ", class: "btn btn-primary", type: "button", id: "next" %>
+    </p>
+    </div>
   </div>
-  
+<% end %>
 </div>
-  <% end %>
+
+    <div id="step2-form-container" class="d-flex justify-content-center col-12 w-25" >
+      <!-- ステップ2のフォームがここに表示されます -->
+    </div>
