--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,3 +31,23 @@
 .main {
   height: 100%;
 }
+
+.form-width {
+  width: 200px;
+  background-color: red;
+}
+
+#step1-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/* ステップ1のフォームボックス */
+.post-box {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
