フォームのビューの変更

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
 <%= render "shared/sidebar" %>
-<div class= "d-flex justify-content-center col-12 w-25">
-<%= form_with model: @post, url: posts_path, local: true, class: "p-5", id: "step1-form" do |f| %>
+<div class= "d-flex justify-content-end col-12 w-25">
+<%= form_with model: @post, url: posts_path, local: true, class: "p-5 me-0", id: "step1-form" do |f| %>
   <div class="post-box">
-    <p class="text-center mb-3 fs-2">コーディネート登録</p>
+    <p class="text-center mb-3 fs-2">アカウント選択</p>
 
     <div class="add-form row p-3">
     <div class="d-flex justify-content-center flex-column">
@@ -27,6 +27,6 @@
 <% end %>
 </div>
 
-    <div id="step2-form-container" class="d-flex justify-content-center col-12 w-25" >
+    <div id="step2-form-container" class="form-2 col-12 w-50" >
       <!-- ステップ2のフォームがここに表示されます -->
     </div>
