--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -32,17 +32,14 @@
   height: 100%;
 }
 
-.form-width {
-  width: 200px;
-  background-color: red;
-}
-
-#step1-form {
+#step1-form,
+.form-2 {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
+
 
 /* ステップ1のフォームボックス */
 .post-box {
@@ -50,4 +47,13 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#step1-form.completed {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.hidden {
+  display: none;
 }
