--- a/app/views/posts/_step2_form.html.erb
+++ b/app/views/posts/_step2_form.html.erb
@@ -1,7 +1,8 @@
-<div class= " d-flex justify-content-center col-12 w-25">
-  <%= form_with model: @post, url: posts_path, local: true, class: "p-5", id: "content" do |f| %>
+<div class= " d-flex justify-content-center col-12">
+  <i class="bi bi-caret-right-fill fs-1 text-muted d-flex align-items-center me-5"></i>
+  <%= form_with model: @post, url: posts_path, local: true, class: "p-5 ", id: "content" do |f| %>
     <div class="post-box">
-      <p class="text-center mb-3 fs-2">コーディネート登録</p>
+      <p class="text-center mb-3 fs-2">コーディネート投稿</p>
     <div class="add-form row p-3">
     <div class="d-flex justify-content-center flex-column">
       <%= f.date_field :date, class:"form-control mb-2", placeholder:"yyyy/mm/dd" %>
