表示の変更

--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -51,7 +51,7 @@
       <%= link_to post_path(post.id), class: "text-decoration-none col-md-6 row-md" do %>
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
           <div class="col-6 p-4 position-static">
-            <strong class="d-inline-block mb-2 text-success">World</strong>
+            <strong class="d-inline-block mb-2 text-success"><%= post.account.name %></strong>
             <h4 class="mb-1 text-muted"><%= post.date%></h4>
             <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
             <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
