post一覧ページの変更

--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -48,13 +48,23 @@
 
   <div class = "row">
     <% @posts.each do |post|%>
-      <%= link_to post_path(post.id), class: "text-decoration-none col-md-6 row-md" do %>
+      <%= link_to post_path(post.id), class: "text-decoration-none col-md-4 row-md" do %>
         <div class="g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250 position-relative row">
           <div class="col-6 p-4 position-static">
-            <strong class="d-inline-block mb-2 text-success"><%= post.account.name %></strong>
-            <h4 class="mb-1 text-muted"><%= post.date%></h4>
-            <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
-            <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
+
+            <h5 class="mb-1 text-muted"><%= post.date%></h5>
+            <div class="row mb-1">
+              <p class="card-text mb-auto text-muted"><%= post.low.name %>℃~<%= post.high.name %>℃ <%= post.weather.name %></p>
+              <p class="deco card-text mb-auto text-muted"><%= post.content %></p>
+            </div>
+          <div class="item col-2">
+          <% if post.account.image.present? %>
+            <%= image_tag post.account.image.variant(resize: '30x30'), class: "rounded-circle" %>
+          <% else %>
+            <%= image_tag "icon.png", variant: { resize: '30x30' }, class: "icon-resize2 rounded-circle" %>
+          <% end %>
+          </div>
+
           </div>
           <div class="col-6 d-none d-lg-block align-self-center">
             <% post.items.each do |item| %>
